<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".secondActivity">

    <ImageView
        android:id="@+id/imageViewgallery"
        android:layout_width="285dp"
        android:layout_height="314dp"
        android:layout_marginTop="106dp"
        android:contentDescription="@string/images"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4"
        app:srcCompat="@drawable/africanrenaissance" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="299dp"
        android:layout_marginLeft="299dp"
        android:layout_marginTop="176dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="148dp"
        android:onClick="nextImageClicked"
        android:text="@string/right_button"
        app:layout_constraintBottom_toTopOf="@+id/imageViewgallery"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.988" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="176dp"
        android:layout_marginEnd="287dp"
        android:layout_marginRight="287dp"
        android:onClick="previousImageClicked"
        android:text="@string/left_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageViewLabelling"
        android:layout_width="324dp"
        android:layout_height="135dp"
        android:layout_marginTop="31dp"
        android:layout_marginBottom="565dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/african"
        android:contentDescription="@string/todo" />


</androidx.constraintlayout.widget.ConstraintLayout>